fixed the logo, working on css flex wraps

--- a/css/main.css
+++ b/css/main.css
@@ -313,7 +313,7 @@ main {
 
 .imgs-gallery {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
 }
 
@@ -371,7 +371,7 @@ figcaption {
   align-items: center;
   justify-content: center;
   padding: 10px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   width: 1920px;
 }
 
